[gd_scene load_steps=18 format=3 uid="uid://c73evq08u0jcb"]

[ext_resource type="Script" path="res://scripts/main_camera.gd" id="4_bkmmq"]
[ext_resource type="Script" path="res://scripts/third_person_camera.gd" id="4_s0adt"]
[ext_resource type="Texture2D" uid="uid://di1plhdkug7pc" path="res://textures/wooden_garage_door_diff_2k.png" id="5_sm5d2"]
[ext_resource type="Texture2D" uid="uid://d3ijnwmkw2yuh" path="res://textures/wooden_garage_door_nor_gl_2k.png" id="6_cvl5s"]
[ext_resource type="Texture2D" uid="uid://bgrvai8nwaxxx" path="res://textures/wooden_garage_door_rough_2k.png" id="7_g1wh2"]
[ext_resource type="PackedScene" uid="uid://do6yslistk8je" path="res://icons/UM_Logo.gltf" id="8_l1rbf"]
[ext_resource type="Script" path="res://scripts/ui.gd" id="9_djucm"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wtoqj"]
albedo_color = Color(0.127821, 0.173184, 1, 1)

[sub_resource type="PrismMesh" id="PrismMesh_xc034"]
material = SubResource("StandardMaterial3D_wtoqj")
size = Vector3(1, 1.5, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8g8fw"]
albedo_texture = ExtResource("5_sm5d2")
roughness_texture = ExtResource("7_g1wh2")
normal_enabled = true
normal_texture = ExtResource("6_cvl5s")
uv1_scale = Vector3(5, 40, 10)

[sub_resource type="BoxMesh" id="BoxMesh_7ii82"]
material = SubResource("StandardMaterial3D_8g8fw")
size = Vector3(2, 7, 2)

[sub_resource type="BoxMesh" id="BoxMesh_ug5di"]
material = SubResource("StandardMaterial3D_8g8fw")
size = Vector3(2, 5, 2)

[sub_resource type="BoxMesh" id="BoxMesh_r1g7y"]
material = SubResource("StandardMaterial3D_8g8fw")
size = Vector3(2, 10, 2)

[sub_resource type="BoxMesh" id="BoxMesh_2ce5v"]
material = SubResource("StandardMaterial3D_8g8fw")
size = Vector3(2, 15, 2)

[sub_resource type="BoxMesh" id="BoxMesh_v437r"]
material = SubResource("StandardMaterial3D_8g8fw")
size = Vector3(2, 10, 2)

[sub_resource type="BoxMesh" id="BoxMesh_3rm1h"]
material = SubResource("StandardMaterial3D_8g8fw")
size = Vector3(2, 10, 2)

[sub_resource type="BoxMesh" id="BoxMesh_fxdwi"]
material = SubResource("StandardMaterial3D_8g8fw")
size = Vector3(2, 25, 2)

[node name="world" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1, 0)

[node name="light_source" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.619779, -0.784776, 0, 0.784776, 0.619779, -50, 0, 120)
light_color = Color(1, 0.956177, 0.866958, 1)
light_energy = 1.186
shadow_enabled = true

[node name="third_person_camera" type="Camera3D" parent="."]
transform = Transform3D(0.965926, 0.129409, 0.224144, -0.0669873, 0.961516, -0.266456, -0.25, 0.242362, 0.937422, -1, -8, 29)
visible = false
script = ExtResource("4_s0adt")

[node name="Node3D" type="MeshInstance3D" parent="third_person_camera"]
transform = Transform3D(-4.37114e-08, 4.37114e-08, 1, 1, 1.91069e-15, 4.37114e-08, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("PrismMesh_xc034")

[node name="main_camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 20)
projection = 2
current = true
fov = 120.0
size = 0.02
near = 0.01
far = 150.0
script = ExtResource("4_bkmmq")

[node name="Node3D" type="MeshInstance3D" parent="main_camera"]
transform = Transform3D(-4.37114e-08, 4.37114e-08, 1, 1, 1.91069e-15, 4.37114e-08, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("PrismMesh_xc034")

[node name="pillars" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 4, 0)

[node name="Node" type="Node3D" parent="pillars"]

[node name="Node3D" type="Node3D" parent="pillars/Node"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 5)

[node name="box" type="MeshInstance3D" parent="pillars/Node/Node3D"]
mesh = SubResource("BoxMesh_7ii82")
skeleton = NodePath("../../../..")

[node name="box2" type="MeshInstance3D" parent="pillars/Node/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -2, -2)
mesh = SubResource("BoxMesh_ug5di")
skeleton = NodePath("../../../..")

[node name="box3" type="MeshInstance3D" parent="pillars/Node/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -2)
mesh = SubResource("BoxMesh_r1g7y")
skeleton = NodePath("../../../..")

[node name="box4" type="MeshInstance3D" parent="pillars/Node/Node3D"]
transform = Transform3D(1, 0, 0, 0, 0.6, 0, 0, 0, 1, 2, -1, 0)
mesh = SubResource("BoxMesh_2ce5v")
skeleton = NodePath("../../../..")

[node name="Node3D2" type="Node3D" parent="pillars/Node"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 4, 0, 5)

[node name="box" type="MeshInstance3D" parent="pillars/Node/Node3D2"]
mesh = SubResource("BoxMesh_7ii82")
skeleton = NodePath("../../../..")

[node name="box2" type="MeshInstance3D" parent="pillars/Node/Node3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -4, -2)
mesh = SubResource("BoxMesh_ug5di")
skeleton = NodePath("../../../..")

[node name="box3" type="MeshInstance3D" parent="pillars/Node/Node3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, -2)
mesh = SubResource("BoxMesh_v437r")
skeleton = NodePath("../../../..")

[node name="box4" type="MeshInstance3D" parent="pillars/Node/Node3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -4, 0)
mesh = SubResource("BoxMesh_3rm1h")
skeleton = NodePath("../../../..")

[node name="Node3D3" type="Node3D" parent="pillars/Node"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 4, -4, 5)

[node name="box" type="MeshInstance3D" parent="pillars/Node/Node3D3"]
mesh = SubResource("BoxMesh_7ii82")
skeleton = NodePath("../../../..")

[node name="box2" type="MeshInstance3D" parent="pillars/Node/Node3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -3, -2)
mesh = SubResource("BoxMesh_ug5di")
skeleton = NodePath("../../../..")

[node name="box3" type="MeshInstance3D" parent="pillars/Node/Node3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, -2)
mesh = SubResource("BoxMesh_v437r")
skeleton = NodePath("../../../..")

[node name="box4" type="MeshInstance3D" parent="pillars/Node/Node3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -2, 8.74228e-08)
mesh = SubResource("BoxMesh_3rm1h")
skeleton = NodePath("../../../..")

[node name="Node3D4" type="Node3D" parent="pillars/Node"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -4, 5)

[node name="box" type="MeshInstance3D" parent="pillars/Node/Node3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, -1.74846e-07)
mesh = SubResource("BoxMesh_7ii82")
skeleton = NodePath("../../../..")

[node name="box2" type="MeshInstance3D" parent="pillars/Node/Node3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -2, -2)
mesh = SubResource("BoxMesh_ug5di")
skeleton = NodePath("../../../..")

[node name="box3" type="MeshInstance3D" parent="pillars/Node/Node3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, -2)
mesh = SubResource("BoxMesh_v437r")
skeleton = NodePath("../../../..")

[node name="box4" type="MeshInstance3D" parent="pillars/Node/Node3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 2, -8.74228e-08)
mesh = SubResource("BoxMesh_3rm1h")
skeleton = NodePath("../../../..")

[node name="Node2" type="Node3D" parent="pillars"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -8, 0)

[node name="Node3D" type="Node3D" parent="pillars/Node2"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 5)

[node name="box" type="MeshInstance3D" parent="pillars/Node2/Node3D"]
mesh = SubResource("BoxMesh_7ii82")
skeleton = NodePath("../../../..")

[node name="box2" type="MeshInstance3D" parent="pillars/Node2/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -2, -2)
mesh = SubResource("BoxMesh_ug5di")
skeleton = NodePath("../../../..")

[node name="box3" type="MeshInstance3D" parent="pillars/Node2/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -2)
mesh = SubResource("BoxMesh_r1g7y")
skeleton = NodePath("../../../..")

[node name="box4" type="MeshInstance3D" parent="pillars/Node2/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 2, -8.74228e-08)
mesh = SubResource("BoxMesh_2ce5v")
skeleton = NodePath("../../../..")

[node name="Node3D2" type="Node3D" parent="pillars/Node2"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 4, 0, 5)

[node name="box" type="MeshInstance3D" parent="pillars/Node2/Node3D2"]
mesh = SubResource("BoxMesh_7ii82")
skeleton = NodePath("../../../..")

[node name="box2" type="MeshInstance3D" parent="pillars/Node2/Node3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -1, -2)
mesh = SubResource("BoxMesh_ug5di")
skeleton = NodePath("../../../..")

[node name="box3" type="MeshInstance3D" parent="pillars/Node2/Node3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, -2)
mesh = SubResource("BoxMesh_v437r")
skeleton = NodePath("../../../..")

[node name="box4" type="MeshInstance3D" parent="pillars/Node2/Node3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -1, 0)
mesh = SubResource("BoxMesh_3rm1h")
skeleton = NodePath("../../../..")

[node name="Node3D3" type="Node3D" parent="pillars/Node2"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 4, -4, 5)

[node name="box" type="MeshInstance3D" parent="pillars/Node2/Node3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
mesh = SubResource("BoxMesh_7ii82")
skeleton = NodePath("../../../..")

[node name="box2" type="MeshInstance3D" parent="pillars/Node2/Node3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -4, -2)
mesh = SubResource("BoxMesh_ug5di")
skeleton = NodePath("../../../..")

[node name="box3" type="MeshInstance3D" parent="pillars/Node2/Node3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3, -2)
mesh = SubResource("BoxMesh_v437r")
skeleton = NodePath("../../../..")

[node name="box4" type="MeshInstance3D" parent="pillars/Node2/Node3D3"]
transform = Transform3D(1, 0, 0, 0, 0.6, 0, 0, 0, 1, 2, -1, 0)
mesh = SubResource("BoxMesh_3rm1h")
skeleton = NodePath("../../../..")

[node name="Node3D4" type="Node3D" parent="pillars/Node2"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -4, 5)

[node name="box" type="MeshInstance3D" parent="pillars/Node2/Node3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
mesh = SubResource("BoxMesh_7ii82")
skeleton = NodePath("../../../..")

[node name="box2" type="MeshInstance3D" parent="pillars/Node2/Node3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -2, -2)
mesh = SubResource("BoxMesh_ug5di")
skeleton = NodePath("../../../..")

[node name="box3" type="MeshInstance3D" parent="pillars/Node2/Node3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -2)
mesh = SubResource("BoxMesh_v437r")
skeleton = NodePath("../../../..")

[node name="box4" type="MeshInstance3D" parent="pillars/Node2/Node3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -3, 0)
mesh = SubResource("BoxMesh_3rm1h")
skeleton = NodePath("../../../..")

[node name="Node3" type="Node3D" parent="pillars"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 0)

[node name="Node3D" type="Node3D" parent="pillars/Node3"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 5)

[node name="box" type="MeshInstance3D" parent="pillars/Node3/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
mesh = SubResource("BoxMesh_7ii82")
skeleton = NodePath("../../../..")

[node name="box2" type="MeshInstance3D" parent="pillars/Node3/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -2, -2)
mesh = SubResource("BoxMesh_ug5di")
skeleton = NodePath("../../../..")

[node name="box3" type="MeshInstance3D" parent="pillars/Node3/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3, -2)
mesh = SubResource("BoxMesh_r1g7y")
skeleton = NodePath("../../../..")

[node name="box4" type="MeshInstance3D" parent="pillars/Node3/Node3D"]
transform = Transform3D(1, 0, 0, 0, 0.7, 0, 0, 0, 1, 2, 0, -4.76837e-07)
mesh = SubResource("BoxMesh_2ce5v")
skeleton = NodePath("../../../..")

[node name="Node3D2" type="Node3D" parent="pillars/Node3"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 4, 0, 5)

[node name="box" type="MeshInstance3D" parent="pillars/Node3/Node3D2"]
mesh = SubResource("BoxMesh_7ii82")
skeleton = NodePath("../../../..")

[node name="box2" type="MeshInstance3D" parent="pillars/Node3/Node3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -2, -2)
mesh = SubResource("BoxMesh_ug5di")
skeleton = NodePath("../../../..")

[node name="box3" type="MeshInstance3D" parent="pillars/Node3/Node3D2"]
transform = Transform3D(1, 0, 0, 0, 0.8, 0, 0, 0, 1, 0, -1.43051e-06, -2)
mesh = SubResource("BoxMesh_v437r")
skeleton = NodePath("../../../..")

[node name="box4" type="MeshInstance3D" parent="pillars/Node3/Node3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 2, -8.74228e-08)
mesh = SubResource("BoxMesh_3rm1h")
skeleton = NodePath("../../../..")

[node name="Node3D3" type="Node3D" parent="pillars/Node3"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 4, -4, 5)

[node name="box" type="MeshInstance3D" parent="pillars/Node3/Node3D3"]
mesh = SubResource("BoxMesh_7ii82")
skeleton = NodePath("../../../..")

[node name="box2" type="MeshInstance3D" parent="pillars/Node3/Node3D3"]
transform = Transform3D(1, 0, 0, 0, 1.3, 0, 0, 0, 1, 2, 0, -2)
mesh = SubResource("BoxMesh_ug5di")
skeleton = NodePath("../../../..")

[node name="box3" type="MeshInstance3D" parent="pillars/Node3/Node3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -2)
mesh = SubResource("BoxMesh_v437r")
skeleton = NodePath("../../../..")

[node name="box4" type="MeshInstance3D" parent="pillars/Node3/Node3D3"]
transform = Transform3D(1, 0, 0, 0, 0.6, 0, 0, 0, 1, 2, 3, -1.31134e-07)
mesh = SubResource("BoxMesh_fxdwi")
skeleton = NodePath("../../../..")

[node name="Node3D4" type="Node3D" parent="pillars/Node3"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -4, 5)

[node name="box" type="MeshInstance3D" parent="pillars/Node3/Node3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 4.37114e-08)
mesh = SubResource("BoxMesh_7ii82")
skeleton = NodePath("../../../..")

[node name="box2" type="MeshInstance3D" parent="pillars/Node3/Node3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -2, -2)
mesh = SubResource("BoxMesh_ug5di")
skeleton = NodePath("../../../..")

[node name="box3" type="MeshInstance3D" parent="pillars/Node3/Node3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, -2)
mesh = SubResource("BoxMesh_v437r")
skeleton = NodePath("../../../..")

[node name="box4" type="MeshInstance3D" parent="pillars/Node3/Node3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)
mesh = SubResource("BoxMesh_3rm1h")
skeleton = NodePath("../../../..")

[node name="Node4" type="Node3D" parent="pillars"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, -8, 0)

[node name="Node3D" type="Node3D" parent="pillars/Node4"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 5)

[node name="box" type="MeshInstance3D" parent="pillars/Node4/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3, 2.38419e-07)
mesh = SubResource("BoxMesh_7ii82")
skeleton = NodePath("../../../..")

[node name="box2" type="MeshInstance3D" parent="pillars/Node4/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -2, -2)
mesh = SubResource("BoxMesh_ug5di")
skeleton = NodePath("../../../..")

[node name="box3" type="MeshInstance3D" parent="pillars/Node4/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, -2)
mesh = SubResource("BoxMesh_r1g7y")
skeleton = NodePath("../../../..")

[node name="box4" type="MeshInstance3D" parent="pillars/Node4/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -2, 0)
mesh = SubResource("BoxMesh_2ce5v")
skeleton = NodePath("../../../..")

[node name="Node3D2" type="Node3D" parent="pillars/Node4"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 4, 0, 5)

[node name="box" type="MeshInstance3D" parent="pillars/Node4/Node3D2"]
mesh = SubResource("BoxMesh_7ii82")
skeleton = NodePath("../../../..")

[node name="box2" type="MeshInstance3D" parent="pillars/Node4/Node3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -2, -2)
mesh = SubResource("BoxMesh_ug5di")
skeleton = NodePath("../../../..")

[node name="box3" type="MeshInstance3D" parent="pillars/Node4/Node3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, -2)
mesh = SubResource("BoxMesh_v437r")
skeleton = NodePath("../../../..")

[node name="box4" type="MeshInstance3D" parent="pillars/Node4/Node3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -3, 2.38419e-07)
mesh = SubResource("BoxMesh_3rm1h")
skeleton = NodePath("../../../..")

[node name="Node3D3" type="Node3D" parent="pillars/Node4"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 4, -4, 5)

[node name="box" type="MeshInstance3D" parent="pillars/Node4/Node3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3, 0)
mesh = SubResource("BoxMesh_7ii82")
skeleton = NodePath("../../../..")

[node name="box2" type="MeshInstance3D" parent="pillars/Node4/Node3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -3, -2)
mesh = SubResource("BoxMesh_ug5di")
skeleton = NodePath("../../../..")

[node name="box3" type="MeshInstance3D" parent="pillars/Node4/Node3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -2)
mesh = SubResource("BoxMesh_v437r")
skeleton = NodePath("../../../..")

[node name="box4" type="MeshInstance3D" parent="pillars/Node4/Node3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -3, 0)
mesh = SubResource("BoxMesh_3rm1h")
skeleton = NodePath("../../../..")

[node name="Node3D4" type="Node3D" parent="pillars/Node4"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -4, 5)

[node name="box" type="MeshInstance3D" parent="pillars/Node4/Node3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
mesh = SubResource("BoxMesh_7ii82")
skeleton = NodePath("../../../..")

[node name="box2" type="MeshInstance3D" parent="pillars/Node4/Node3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -1, -2)
mesh = SubResource("BoxMesh_ug5di")
skeleton = NodePath("../../../..")

[node name="box3" type="MeshInstance3D" parent="pillars/Node4/Node3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -2)
mesh = SubResource("BoxMesh_v437r")
skeleton = NodePath("../../../..")

[node name="box4" type="MeshInstance3D" parent="pillars/Node4/Node3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -3, 0)
mesh = SubResource("BoxMesh_3rm1h")
skeleton = NodePath("../../../..")

[node name="um_logo" parent="." instance=ExtResource("8_l1rbf")]
transform = Transform3D(0.5, 0, 0, 0, -8.74228e-08, -0.5, 0, 2, -2.18557e-08, 0, -13, 1)

[node name="ui" type="Control" parent="." node_paths=PackedStringArray("main_camera", "third_person_camera")]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
script = ExtResource("9_djucm")
main_camera = NodePath("../main_camera")
third_person_camera = NodePath("../third_person_camera")

[node name="delay_label" type="Label" parent="ui"]
layout_mode = 0
offset_left = 20.0
offset_top = 17.0
offset_right = 73.0
offset_bottom = 40.0
text = "foo ms"

[node name="third_person_view_toggle" type="CheckButton" parent="ui"]
layout_mode = 2
offset_left = 20.0
offset_top = 55.0
offset_right = 230.0
offset_bottom = 85.0
theme_override_font_sizes/font_size = 15
text = "third person view"

[node name="camera_output_toggle" type="CheckButton" parent="ui"]
layout_mode = 2
offset_left = 20.0
offset_top = 85.4136
offset_right = 230.0
offset_bottom = 115.414
theme_override_font_sizes/font_size = 15
text = "camera output canvas"

[node name="fixed_angle_toggle" type="CheckButton" parent="ui"]
layout_mode = 2
offset_left = 20.0
offset_top = 115.827
offset_right = 230.0
offset_bottom = 154.827
theme_override_font_sizes/font_size = 22
button_pressed = true
text = "fixed angle"

[node name="interpolation_toggle" type="CheckButton" parent="ui"]
layout_mode = 0
offset_left = 20.0
offset_top = 155.0
offset_right = 305.0
offset_bottom = 186.0
button_pressed = true
text = "linear interpolation smoothing"

[node name="main_camera_sensitivity_slider" type="HSlider" parent="ui"]
layout_mode = 2
offset_left = 20.0
offset_top = 201.0
offset_right = 230.0
offset_bottom = 217.0
tooltip_text = "Main Camera Sensivity"
min_value = 10.0
step = 5.0
value = 25.0
rounded = true
tick_count = 10
ticks_on_borders = true

[node name="label" type="Label" parent="ui/main_camera_sensitivity_slider"]
layout_mode = 2
offset_top = 20.0
offset_right = 338.0
offset_bottom = 43.0
text = "main camera sensitivity"

[node name="main_camera_follow_speed_slider" type="HSlider" parent="ui"]
layout_mode = 0
offset_left = 20.0
offset_top = 250.713
offset_right = 230.0
offset_bottom = 266.713
min_value = 1.0
max_value = 20.0
value = 20.0
tick_count = 10

[node name="Label" type="Label" parent="ui/main_camera_follow_speed_slider"]
layout_mode = 0
offset_top = 20.0
offset_right = 204.0
offset_bottom = 43.0
text = "main camera follow speed"

[node name="third_person_camera_sensitivity_slider" type="HSlider" parent="ui"]
layout_mode = 2
offset_left = 20.0
offset_top = 300.713
offset_right = 230.0
offset_bottom = 316.713
tooltip_text = "Third Person Camera Sensivity"
min_value = 10.0
step = 5.0
value = 50.0
rounded = true
tick_count = 10
ticks_on_borders = true

[node name="label" type="Label" parent="ui/third_person_camera_sensitivity_slider"]
layout_mode = 2
offset_top = 20.0
offset_right = 338.0
offset_bottom = 43.0
text = "third person camera sensivity"

[node name="fov_slider" type="HSlider" parent="ui"]
layout_mode = 2
offset_left = 20.0
offset_top = 350.713
offset_right = 230.0
offset_bottom = 366.713
min_value = 1.0
max_value = 170.0
value = 120.0
rounded = true

[node name="Label" type="Label" parent="ui/fov_slider"]
layout_mode = 0
offset_top = 20.0
offset_right = 25.0
offset_bottom = 43.0
text = "fov"

[connection signal="delay_updated" from="main_camera" to="ui" method="update_delay_label"]
